avoid overlapping with buttons

--- a/app/assets/stylesheets/v2/_middleware_edit.scss
+++ b/app/assets/stylesheets/v2/_middleware_edit.scss
@@ -56,7 +56,7 @@
 
 .last-trace-call-box {
   height:2em;
-  padding: 0.5em 0;
+  padding: 0.5em 10em 0.5em 0;
   position: absolute;
   top: 0;
   left: 1em;
